# actix-web-correlation-id

./: Cargo.toml  LICENSE  README.md  README.tpl
.github/workflows/: rust.yml
examples/: main.rs
src/: client.rs  lib.rs  logger.rs  middleware.rs
src/core/: config.rs  correlation_id.rs  middleware.rs  mod.rs
tests/: integration_test.rs
