[package]
name = "actix-web-correlation-id"
version = "0.1.0"
authors = ["Irek Nigmatullin <nigma143@mail.ru>"]
description = "Actix-web middleware to sign and verify detached jws"
documentation = "http://docs.rs/actix-web-correlation-id/"
repository = "http://github.com/nigma143/actix-web-correlation-id"
readme = "README.md"
keywords = ["actix", "actix-web", "correlation", "requestid", "middleware"]
license  = "BSD-2-Clause"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
actix-web = { version = "3" }
actix-service = "1.0"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]

[[example]]
name = "main" # examples/main.rs
