[package]
name = "actix-web-correlation-id"
version = "1.0.0"
authors = ["Irek Nigmatullin <nigma143@mail.ru>", "Juergen Fickel <github@retujo.de>"]
description = "An Actix-web middleware component which synchronises a correlation ID for cross API request logging"
documentation = "https://docs.rs/actix-web-correlation-id/"
repository = "https://github.com/nigma143/actix-web-correlation-id"
readme = "README.md"
keywords = ["actix", "actix-web", "correlation", "requestid", "middleware"]
license  = "BSD-2-Clause"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4" }
awc = { version = "3", optional = true }
futures = { version = "0.3" }
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
env_logger = "0.10.0"

[features]
default = ["logger"]
client = ["dep:awc"]
logger = []

[[example]]
name = "main" # examples/main.rs
required-features = ["logger", "client"]
